# LanSound

./: .clangd  .gitignore  CMakeLists.txt  encodeTest.cpp  xmake.lua
src/: encoder.cppm  main.cpp  packet.cppm  queue.cppm  send_packet.cppm
